update verify otp
