# internal/domain/entity/otp_code_entity.go
@@ -3,9 +3,10 @@ package entity
 import "time"
 
 type OtpCodeEntity struct {
-	Id        int64
-	Code      string
-	ExpiredAt time.Time
-	UserId    int64
-	User      *UserEntity
+	Id         int64
+	Code       string
+	ExpiredAt  time.Time
+	UserId     int64
+	ResetToken *string
+	User       *UserEntity
 }
