# internal/infrastructure/model/otp_code_model.go
@@ -6,11 +6,12 @@ import (
 )
 
 type OtpCodeModel struct {
-	Id        int64      `gorm:"column:id;primaryKey;autoIncrement"`
-	Code      string     `gorm:"column:code;not null;index"`
-	ExpiredAt time.Time  `gorm:"column:expired_at;not null"`
-	UserId    int64      `gorm:"column:user_id;not null;index"`
-	User      *UserModel `gorm:"foreignKey:UserId;references:Id;constraint:OnUpdate:CASCADE,OnDelete:CASCADE"`
+	Id         int64      `gorm:"column:id;primaryKey;autoIncrement"`
+	Code       string     `gorm:"column:code;not null;index"`
+	ExpiredAt  time.Time  `gorm:"column:expired_at;not null"`
+	UserId     int64      `gorm:"column:user_id;not null;index"`
+	ResetToken *string    `gorm:"column:reset_token;index"`
+	User       *UserModel `gorm:"foreignKey:UserId;references:Id;constraint:OnUpdate:CASCADE,OnDelete:CASCADE"`
 }
 
 func (OtpCodeModel) TableName() string {
@@ -23,10 +24,11 @@ func (model *OtpCodeModel) ToEntity() *entity.OtpCodeEntity {
 		userEntity = model.User.ToEntity()
 	}
 	return &entity.OtpCodeEntity{
-		Id:        model.Id,
-		Code:      model.Code,
-		ExpiredAt: model.ExpiredAt,
-		UserId:    model.UserId,
-		User:      userEntity,
+		Id:         model.Id,
+		Code:       model.Code,
+		ExpiredAt:  model.ExpiredAt,
+		UserId:     model.UserId,
+		User:       userEntity,
+		ResetToken: model.ResetToken,
 	}
 }
